--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -38,6 +38,7 @@
 @define-color button_gradient_color_c shade (@theme_bg_color, 0.8);
 @define-color borders #24282a;
 
+@define-color button_active_text @theme_selected_bg_color;
 @define-color button_active_text_shadow alpha(black, 0.45);
 @define-color button_text_shadow alpha(black, 0.7);
 @define-color primary_toolbar_button_text_shadow alpha(black, 0.1);
