--- a/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
@@ -1,22 +1,3 @@
-.entry:focus {
-    box-shadow: 2 2 inset alpha(lighter(@theme_selected_bg_color), 0.2), -2 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 1 1 inset alpha(lighter(@theme_selected_bg_color), 0.7), -1 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
-}
-
-.spinbutton .button:active,
-.spinbutton .button:active:focus {
-    box-shadow: 1 0 inset @inset_dark_color, 0 2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 0 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 0 1 inset alpha(lighter(@theme_selected_bg_color), 0.7), 0 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
-}
-
-.spinbutton .button:first-child:active,
-.spinbutton .button:first-child:active:focus {
-    box-shadow: 2 2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 0 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 1 1 inset alpha(lighter(@theme_selected_bg_color), 0.7), 0 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
-}
-
-.spinbutton .button:last-child:active,
-.spinbutton .button:last-child:active:focus {
-    box-shadow: 1 0 inset @inset_dark_color, 0 2 inset alpha(lighter(@theme_selected_bg_color), 0.2), -2 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 0 1 inset alpha(lighter(@theme_selected_bg_color), 0.7), -1 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
-}
-
 GtkIconView.view.cell:selected,
 GtkIconView.view.cell:selected:focus {
     background-color: alpha(@theme_base_color, 0.0);
@@ -40,18 +21,22 @@ GtkComboBox {
 }
 
 .button *:active,
-.button *:active:hover,
+/*.button *:active:hover,
 .button *:active:focus,
-.button *:active:hover:focus,
-GtkComboBox *:active,
+.button *:active:hover:focus, */
+GtkComboBox *:active /*,
 GtkComboBox *:active:hover,
 GtkComboBox *:active:focus,
-GtkComboBox *:active:hover:focus {
+GtkComboBox *:active:hover:focus*/ {
     text-shadow: @button_active_text_shadow 0 -1;
-    color: @theme_selected_bg_color; /* Not sure about this one */
+/*    color: @theme_selected_bg_color; /* Not sure about this one */
 }
 
-.button
+.button *:insensitive,
+.button *:active:insensitive {
+    text-shadow: none;
+}
+
 .button.raised,
 .raised .button,
 .inline-toolbar .button,
@@ -78,6 +63,11 @@ column-header .button {
     text-shadow: none;
 }
 
+
+.spinbutton .button {
+    icon-shadow: none;
+}
+
 .button .separator,
 .button .separator:prelight {
     color: alpha (@theme_text_color, 0.1);
@@ -95,7 +85,9 @@ GtkSwitch.slider {
 
     -adwaita-switch-grip-color: shade (@switch_slider_color, 0.9);
     border-color: mix (@borders, black, 0.4);
-    box-shadow: 0 -1 inset alpha(white, 0.04), 0 1 inset shade(@theme_bg_color, 1.1), 0 2 inset alpha(@borders, 0.2);
+    box-shadow: 0 -1 inset alpha(white, 0.04), 
+                0 1 inset shade(@theme_bg_color, 1.1),
+                0 2 inset alpha(@borders, 0.2);
 }
 
 .scrollbar.trough.vertical {
@@ -108,5 +100,40 @@ GtkSwitch.slider {
 
 .primary-toolbar .toolbar,
 .primary-toolbar.toolbar {
-    box-shadow: 0 3 inset alpha(black, 0.05), 0 2 inset alpha(black, 0.05), 0 1 inset alpha(black, 0.05);
+    box-shadow: 0 3 inset alpha(black, 0.05),
+                0 2 inset alpha(black, 0.05),
+                0 1 inset alpha(black, 0.05);
+}
+
+.entry:focus {
+    box-shadow: 2 2 inset alpha(lighter(@theme_selected_bg_color), 0.2),
+               -2 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2),
+               1 1 inset alpha(lighter(@theme_selected_bg_color), 0.7),
+               -1 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
+}
+
+.spinbutton .button:active,
+.spinbutton .button:active:focus {
+    box-shadow: 1 0 inset @inset_dark_color,
+                0 2 inset alpha(lighter(@theme_selected_bg_color), 0.2),
+                0 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 
+                0 1 inset alpha(lighter(@theme_selected_bg_color), 0.7), 
+                0 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
+}
+
+.spinbutton .button:first-child:active,
+.spinbutton .button:first-child:active:focus {
+    box-shadow: 2 2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 
+                0 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 
+                1 1 inset alpha(lighter(@theme_selected_bg_color), 0.7), 
+                0 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
+}
+
+.spinbutton .button:last-child:active,
+.spinbutton .button:last-child:active:focus {
+    box-shadow: 1 0 inset @inset_dark_color, 
+                0 2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 
+                -2 -2 inset alpha(lighter(@theme_selected_bg_color), 0.2), 
+                0 1 inset alpha(lighter(@theme_selected_bg_color), 0.7),
+                -1 -1 inset alpha(lighter(@theme_selected_bg_color), 0.7);
 }
