--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -512,7 +512,7 @@ GtkComboBox.combobox-entry .button {
 .button *:active:hover:focus,
 .button *:active:focus */ {
     text-shadow: @button_active_text_shadow 0 1;
-    color: darker(@theme_selected_bg_color); /* Not sure about this one */
+    color: @button_active_text; /* Not sure about this one */
 }
 
 .button *:insensitive {
@@ -553,8 +553,8 @@ GtkComboBox.combobox-entry .button {
     border-color: transparent;
 }
 
-.primary-toolbar .button.raised *,
-.primary-toolbar .raised .button *,
+.toolbar .button.raised *,
+.toolbar .raised .button *,
 .inline-toolbar .button * {
     icon-shadow: @button_text_shadow 0 1;
     text-shadow: @button_text_shadow 0 1;
@@ -590,8 +590,8 @@ GtkComboBox.combobox-entry .button {
     color: mix(@unfocused_insensitive_bg_color, @unfocused_dark_bg, 0.65); /* FIXME */
 }
 
-.primary-toolbar .button.raised *:insensitive:backdrop,
-.primary-toolbar .raised .button *:insensitive:backdrop {
+.toolbar .button.raised *:insensitive:backdrop,
+.toolbar .raised .button *:insensitive:backdrop {
     color: @unfocused_insensitive_fg_color;
 }
 
@@ -599,64 +599,64 @@ GtkComboBox.combobox-entry .button {
 
 /* Set up shadows and hilights for button visual separation */
 .linked .button,
-.primary-toolbar .button.raised.linked,
-.primary-toolbar .raised.linked .button,
+.toolbar .button.raised.linked,
+.toolbar .raised.linked .button,
 .inline-toolbar.toolbar .button,
 .inline-toolbar.toolbar GtkToolButton .button {
     box-shadow: 1 0 inset @inset_light_color, -1 0 inset @inset_dark_color;
 }
 
 .linked .button:first-child,
-.primary-toolbar .button.raised.linked:first-child,
-.primary-toolbar .raised.linked .button:first-child,
+.toolbar .button.raised.linked:first-child,
+.toolbar .raised.linked .button:first-child,
 .inline-toolbar.toolbar .button:first-child,
 .inline-toolbar.toolbar GtkToolButton:first-child .button {
     box-shadow: -1 0 inset @inset_dark_color;
 }
 
 .linked .button:last-child,
-.primary-toolbar .button.raised.linked:last-child,
-.primary-toolbar .raised.linked .button:last-child,
+.toolbar .button.raised.linked:last-child,
+.toolbar .raised.linked .button:last-child,
 .inline-toolbar.toolbar .button:last-child,
 .inline-toolbar.toolbar GtkToolButton:last-child .button {
     box-shadow: 1 0 inset @inset_light_color;
 }
 
 .linked .button:active,
-.primary-toolbar .button.raised.linked:active,
-.primary-toolbar .raised.linked .button:active,
+.toolbar .button.raised.linked:active,
+.toolbar .raised.linked .button:active,
 .inline-toolbar.toolbar .button:active,
 .inline-toolbar.toolbar GtkToolButton .button:active {
     box-shadow: 1 0 inset @inset_dark_color;
 }
 
 .linked .button:insensitive,
-.primary-toolbar .button.raised.linked:insensitive,
-.primary-toolbar .raised.linked .button:insensitive,
+.toolbar .button.raised.linked:insensitive,
+.toolbar .raised.linked .button:insensitive,
 .inline-toolbar.toolbar .button:insensitive,
 .inline-toolbar.toolbar GtkToolButton .button:insensitive {
     box-shadow: -1 0 inset @inset_dark_color;
 }
 
 .linked .button:backdrop,
-.primary-toolbar .button.raised.linked:backdrop,
-.primary-toolbar .raised.linked .button:backdrop,
+.toolbar .button.raised.linked:backdrop,
+.toolbar .raised.linked .button:backdrop,
 .inline-toolbar.toolbar .button:backdrop,
 .inline-toolbar.toolbar GtkToolButton .button:backdrop {
     box-shadow: -1 0 inset @unfocused_borders;
 }
 
 .linked .button:insensitive:backdrop,
-.primary-toolbar .button.raised.linked:insensitive:backdrop,
-.primary-toolbar .raised.linked .button:insensitive:backdrop,
+.toolbar .button.raised.linked:insensitive:backdrop,
+.toolbar .raised.linked .button:insensitive:backdrop,
 .inline-toolbar.toolbar .button:insensitive:backdrop,
 .inline-toolbar.toolbar GtkToolButton .button:insensitive:backdrop {
     box-shadow: -1 0 inset @unfocused_insensitive_borders;
 }
 
 .linked .button:insensitive:last-child:backdrop,
-.primary-toolbar .button.raised.linked:insensitive:last-child:backdrop,
-.primary-toolbar .raised.linked .button:insensitive:last-child:backdrop,
+.toolbar .button.raised.linked:insensitive:last-child:backdrop,
+.toolbar .raised.linked .button:insensitive:last-child:backdrop,
 .inline-toolbar.toolbar .button:insensitive:last-child:backdrop,
 .inline-toolbar.toolbar GtkToolButton:last-child .button:insensitive:backdrop {
     box-shadow: none;
@@ -670,27 +670,27 @@ GtkComboBox.combobox-entry .button {
 .inline-toolbar.toolbar GtkToolButton:only-child .button,
 .linked .button:backdrop:last-child,
 .linked .button:insensitive:last-child,
-.primary-toolbar .button.raised.linked:insensitive:last-child,
-.primary-toolbar .raised.linked .button:insensitive:last-child,
+.toolbar .button.raised.linked:insensitive:last-child,
+.toolbar .raised.linked .button:insensitive:last-child,
 .inline-toolbar.toolbar .button:insensitive:last-child,
 .inline-toolbar.toolbar GtkToolButton:last-child .button:insensitive,
-.primary-toolbar .button.raised.linked:backdrop:last-child,
-.primary-toolbar .raised.linked .button:backdrop:last-child,
+.toolbar .button.raised.linked:backdrop:last-child,
+.toolbar .raised.linked .button:backdrop:last-child,
 .inline-toolbar.toolbar .button:backdrop:last-child,
 .inline-toolbar.toolbar GtkToolButton:last-child .button:backdrop,
 .linked .button:insensitive:backdrop:last-child,
-.primary-toolbar .button.raised.linked:insensitive:backdrop:last-child,
-.primary-toolbar .raised.linked .button:insensitive:backdrop:last-child,
+.toolbar .button.raised.linked:insensitive:backdrop:last-child,
+.toolbar .raised.linked .button:insensitive:backdrop:last-child,
 .inline-toolbar.toolbar .button:insensitive:backdrop:last-child,
 .inline-toolbar.toolbar GtkToolButton:last-child .button:insensitive:backdrop,
 .linked .button:backdrop:only-child,
-.primary-toolbar .button.raised.linked:backdrop:only-child,
-.primary-toolbar .raised.linked .button:backdrop:only-child,
+.toolbar .button.raised.linked:backdrop:only-child,
+.toolbar .raised.linked .button:backdrop:only-child,
 .inline-toolbar.toolbar .button:backdrop:only-child,
 .inline-toolbar.toolbar GtkToolButton:only-child .button:backdrop,
 .linked .button:backdrop:insensitive:only-child,
-.primary-toolbar .button.raised.linked:backdrop:insensitive:only-child,
-.primary-toolbar .raised.linked .button:backdrop:insensitive:only-child,
+.toolbar .button.raised.linked:backdrop:insensitive:only-child,
+.toolbar .raised.linked .button:backdrop:insensitive:only-child,
 .inline-toolbar.toolbar .button:backdrop:insensitive:only-child,
 .inline-toolbar.toolbar GtkToolButton:only-child .button:insensitive:backdrop {
     box-shadow: none; 
@@ -1243,7 +1243,6 @@ GtkComboBox .button *:hover {
     box-shadow: -1 0 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
 }
 
-
 .scrollbar.button.top:hover:backdrop,
 .scrollbar.button.bottom:hover:backdrop,
 .scrollbar.button.right:hover:backdrop,
@@ -1572,9 +1571,9 @@ GtkCheckButton:selected:focus {
  * Toolbars *
  ************/
 .toolbar {
-    border-style: solid;
+    border-style: none;
     border-color: darker (@theme_bg_color);
-    border-width: 1 0 1 0;
+/*    border-width: 1 0 1 0; */
     padding: 4;
 }
 
