Widget theme: nautilus floating bar for unfocused windows.

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -136,6 +136,11 @@ NautilusFloatingBar {
     border-style: solid;
 }
 
+NautilusFloatingBar:backdrop {
+    background-color: @theme_unfocused_base_color;
+    border-color: shade(@theme_unfocused_base_color, 0.9);
+}
+
 NautilusFloatingBar .button {
     background-color: alpha (@theme_base_color, 0.0);
     background-image: none;
