Widgets: fixed spinbutton button insensitive background on unfocused windows.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -244,7 +244,8 @@ GtkPaned {
     box-shadow: none;
 }
 
-.spinbutton .button {
+.spinbutton .button,
+.spinbutton .button:backdrop {
     background-color: transparent;
     background-image: none;
 }
