--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
@@ -4,16 +4,12 @@
 .entry,
 GtkComboBox.combobox-entry .entry,
 GtkComboBox.combobox-entry .button,
-GtkComboBox.combobox-entry .button:focus,
 .button:active,
-.button:active:hover,
 .button:insensitive,
 .trough,
 .trough.highlight,
 .trough row,
-.trough row:hover,
-GtkSwitch.trough,
-GtkSwitch.trough:insensitive {
+GtkSwitch.trough {
     border-image: url("borders/generic-border-dark.svg") 3 3 4 3 / 3 3 4 3 stretch;
     border-radius: 3;
     border-width: 1 1 2 1;
@@ -49,19 +45,15 @@ GtkSwitch.trough:active {
 .primary-toolbar .entry,
 .primary-toolbar GtkComboBox.combobox-entry .entry,
 .primary-toolbar GtkComboBox.combobox-entry .button,
-.primary-toolbar GtkComboBox.combobox-entry .button:hover,
-.primary-toolbar GtkComboBox.combobox-entry .button:active,
-.primary-toolbar GtkComboBox.combobox-entry .button:focus,
-.primary-toolbar GtkComboBox.combobox-entry .button:insensitive,
 .primary-toolbar .button:active,
-.primary-toolbar .button:active:insensitive,
-.primary-toolbar .button:active:hover,
+.primary-toolbar .button.raised:active,
+.primary-toolbar .raised .button:active,
 .primary-toolbar .button.raised:insensitive,
 .primary-toolbar .raised .button:insensitive,
 .inline-toolbar.toolbar .button:active,
-.inline-toolbar.toolbar .button:active:hover,
 .inline-toolbar.toolbar .button:insensitive,
 .inline-toolbar.toolbar GtkToolButton .button:active,
+.inline-toolbar.toolbar GtkToolButton .button:insensitive,
 .primary-toolbar GtkSwitch.trough,
 .primary-toolbar GtkSwitch.trough:insensitive,
 .primary-toolbar GtkComboBox .button:active,
@@ -69,15 +61,16 @@ GtkSwitch.trough:active {
     border-image: url("borders/primary-toolbar-generic-border-dark.svg") 4 / 4 stretch;
     border-radius: 3;
     border-width: 2;
+    border-style: solid;
+    border-color: transparent;
 }
 
 /* primary toolbar - focused element borders */
 .primary-toolbar .entry:focus,
+.primary-toolbar .button:active:focus,
 .primary-toolbar GtkComboBox.combobox-entry .entry:focus,
 .primary-toolbar .button.raised:focus:active,
 .primary-toolbar .raised .button:focus:active,
-.primary-toolbar .button.raised:focus:active:hover,
-.primary-toolbar .raised .button:focus:active:hover,
 .primary-toolbar .button.raised.default:active,
 .primary-toolbar .raised .button.default:active,
 .inline-toolbar.toolbar .button:focus:active,
@@ -86,19 +79,20 @@ GtkSwitch.trough:active {
     border-image: url("borders/primary-toolbar-generic-border-focused-dark.svg") 4 / 4 stretch;
     border-radius: 3;
     border-width: 2;
+    border-style: solid;
+    border-color: transparent;
 }
 
 /* primary toolbar - generic button borders */
 .primary-toolbar .button.raised,
 .primary-toolbar .raised .button,
-.primary-toolbar .button.raised:hover,
-.primary-toolbar .raised .button:hover,
 .inline-toolbar.toolbar .button,
-.primary-toolbar GtkComboBox .button,
-.primary-toolbar GtkComboBox .button:hover {
+.primary-toolbar GtkComboBox .button {
     border-image: url("borders/primary-toolbar-button-border-dark.svg") 4 / 4 stretch;
     border-radius: 3;
     border-width: 2;
+    border-style: solid;
+    border-color: transparent;
 }
 
 /* primary toolbar - focused button borders */
@@ -106,32 +100,27 @@ GtkSwitch.trough:active {
 .primary-toolbar .button.raised.default,
 .primary-toolbar .raised .button:focus,
 .primary-toolbar .raised .button.default,
-.primary-toolbar .button.raised:focus:hover,
-.primary-toolbar .raised .button:focus:hover,
 .inline-toolbar.toolbar .button:focus,
 .inline-toolbar.toolbar .button.default,
 .primary-toolbar GtkComboBox .button:focus { 
     border-image: url("borders/primary-toolbar-button-border-focused-dark.svg") 4 / 4 stretch;
     border-radius: 3;
     border-width: 2;
+    border-style: solid;
+    border-color: transparent;
 }
 
 /* column-headers borders */
 column-header.button,
 column-header .button,
-column-header.button:hover,
-column-header .button:hover,
 column-header.button:focus,
 column-header .button:focus,
-column-header .button:insensitive,
-column-header.button:focus:hover,
-column-header .button:focus:hover,
-column-header.button:active:focus:hover,
-column-header .button:active:focus:hover,
-column-header.button:active:focus,
-column-header .button:active:focus,
+column-header.button:active,
+column-header .button:active,
 column-header.button:active:hover,
-column-header .button:active:hover {
+column-header .button:active:hover
+column-header.button:active:focus,
+column-header .button:active:focus {
     border-image: -gtk-gradient (linear,
                                  left top, left bottom,
                                  from (@borders),
@@ -153,25 +142,19 @@ column-header .button:backdrop {
 
 column-header.button:last-child,
 column-header:last-child .button,
-column-header.button:hover:last-child,
-column-header:last-child .button:hover,
-column-header.button:focus:last-child,
+column-header.button:last-child:focus,
 column-header:last-child .button:focus,
-column-header .button:insensitive:last-child,
-column-header:last-child .button:insensitive,
-column-header.button:focus:hover:last-child,
-column-header:last-child .button:focus:hover,
-column-header.button:active:focus:hover:last-child,
-column-header:last-child .button:active:focus:hover,
-column-header.button:active:focus:last-child,
-column-header:last-child .button:active:focus,
-column-header.button:active:hover:last-child,
+column-header.button:last-child:active,
+column-header:last-child .button:active,
+column-header.button:last-child:active:hover,
 column-header:last-child .button:active:hover,
-column-header.button:backdrop:last-child,
-column-header:last-child .button:backdrop {
+column-header.button:last-child:active:focus,
+column-header:last-child .button:active:focus {
     border-image: none;
     border-width: 0;
+    border-radius: 0;
 }
+
 /* unfocused window: generic element borders */
 .button:backdrop,
 GtkComboBox.combobox-entry .entry:backdrop,
@@ -186,6 +169,7 @@ GtkSwitch.trough:backdrop,
 }
 
 /* unfocused window: primary toolbar generic element borders */
+.primary-toolbar .button:active:backdrop,
 .primary-toolbar .button.raised:backdrop,
 .primary-toolbar .raised .button:backdrop,
 .primary-toolbar .entry:backdrop,
@@ -195,5 +179,4 @@ GtkSwitch.trough:backdrop,
     border-width: 2;
     border-style: solid;
     border-color: transparent;
-
 }
